--- a/app/src/main/res/layout/activity_scaling.xml
+++ b/app/src/main/res/layout/activity_scaling.xml
@@ -6,64 +6,75 @@
     android:layout_height="match_parent"
     tools:context=".ScalingActivity">
 
-    <androidx.appcompat.widget.Toolbar
+    <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/scalingToolbar"
         style="@style/Theme.PhotoEditor.Header.Effect"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:navigationIcon="@drawable/ic_back_button"
-        app:title="@string/scaling" />
+        app:title="@string/scaling_task_name" />
 
-    <ImageView
-        android:id="@+id/imageViewScaling"
-        style="@style/imagePreviewOnEffect"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_launcher_background" />
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/splinesToolbar">
 
-<!--    <SeekBar-->
-<!--        android:id="@+id/seekBarScaling"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginStart="16dp"-->
-<!--        android:layout_marginTop="32dp"-->
-<!--        android:layout_marginEnd="16dp"-->
-<!--        android:max="99"-->
-<!--        android:textAlignment="center"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toBottomOf="@+id/imageViewScaling" />-->
-    <EditText
-        android:id="@+id/EditTextScaling"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="32dp"
-        android:ems="10"
-        android:hint="@string/resize_koef"
-        android:inputType="numberDecimal"
-        android:textColor="@color/black"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageViewScaling" />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/standart">
+
+            <ImageView
+                android:id="@+id/scalingImage"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/side_margin"
+                android:layout_marginEnd="@dimen/side_margin"
+                android:contentDescription="@string/current_image_desc"
+                android:src="@mipmap/ic_launcher"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <EditText
+                android:id="@+id/scalePicker"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/standart"
+                android:ems="10"
+                android:hint="@string/scale_coefficient"
+                android:inputType="numberDecimal"
+                app:layout_constraintStart_toStartOf="@+id/scalingImage"
+                app:layout_constraintEnd_toEndOf="@+id/scalingImage"
+                app:layout_constraintTop_toBottomOf="@+id/scalingImage"
+                android:importantForAutofill="no" />
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/buttonScalingApply"
+                style="@style/Theme.PhotoEditor.Button.Accent"
+                android:layout_marginTop="@dimen/standart"
+                android:text="@string/apply_button"
+                app:icon="@drawable/ic_check"
+                app:layout_constraintStart_toStartOf="@id/scalePicker"
+                app:layout_constraintEnd_toEndOf="@+id/scalePicker"
+                app:layout_constraintTop_toBottomOf="@+id/scalePicker"/>
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/cancelChanging"
+                style="@style/Theme.PhotoEditor.Button"
+                android:text="@string/cancel_button"
+                android:layout_marginTop="@dimen/half"
+                app:layout_constraintStart_toStartOf="@id/buttonScalingApply"
+                app:layout_constraintEnd_toEndOf="@id/buttonScalingApply"
+                app:layout_constraintTop_toBottomOf="@id/buttonScalingApply"/>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </ScrollView>
 
 
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/buttonScalingApply"
-        style="@style/Theme.PhotoEditor.Button.Accent"
-        android:layout_marginTop="16dp"
-        android:text="@string/apply_button"
-        app:backgroundTint="@color/buttonBackground"
-        app:icon="@drawable/ic_check"
-        app:iconTint="@color/accent"
-        android:layout_marginEnd="32dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/EditTextScaling"/>
+
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
