--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,6 +6,7 @@
     <dimen name="four">64dp</dimen>
     <dimen name="five">80dp</dimen>
     <dimen name="six">96dp</dimen>
+    <dimen name="side_margin">@dimen/two</dimen>
 
     <dimen name="min_button_height">@dimen/three</dimen>
     <dimen name="min_accent_button_height">@dimen/four</dimen>
@@ -15,5 +16,8 @@
 
     <dimen name="welcome_icon_size">@dimen/six</dimen>
     <dimen name="welcome_text_size">18sp</dimen>
-    <dimen name="main_optical_compensation">@dimen/two</dimen>
+    <dimen name="main_optical_compensation">@dimen/three</dimen>
+
+    <dimen name="header_title_size">24sp</dimen>
+    <dimen name="header_height">@dimen/five</dimen>
 </resources>
