--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -4,14 +4,19 @@
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/accent</item>
         <item name="colorPrimaryVariant">@color/accent</item>
-        <item name="colorOnPrimary">@color/white</item>
+        <item name="colorOnPrimary">@color/black</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/accent</item>
         <item name="colorSecondaryVariant">@color/accent</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <item name="toolbarStyle">@style/Widget.MaterialComponents.Toolbar</item>
         <!-- Customize your theme here. -->
+    </style>
+
+    <style name="Widget.MaterialComponents.Toolbar" parent="Widget.MaterialComponents.Toolbar.Primary">
+        <item name="materialThemeOverlay">@style/Theme.PhotoEditor.Header</item>
     </style>
 
     <style name="Theme.PhotoEditor.NoActionBar">
@@ -21,5 +26,4 @@
 
     <style name="Theme.PhotoEditor.AppBarOverlay" parent="ThemeOverlay.MaterialComponents.Dark.ActionBar" />
     <style name="Theme.PhotoEditor.PopupOverlay" parent="ThemeOverlay.MaterialComponents.Light" />
-
 </resources>
